# parser_studies_plan

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  dependencies.py  entrypoint.py  logger.py  utils.py
backend/src/schemas/: response_schemas.py  web_schemas.py  xml_schemas.py
backend/src/services/: analyze_service.py  file_manager.py  pdf_service.py  web_parsing_service.py  xml_parsing_service.py
backend/src/services/templates/: comparison_template.html  report_template.html
backend/src/templates/: report_template.html
backend/src/tests/: conftest.py  temp_test.py
src/: dependencies.py  entypoint.py  utils.py
src/models/: response_model_xml_parser.py
src/schemas/: response_schemas.py  web_schemas.py  xml_schemas.py
src/services/: analyze_service.py  file_manager.py  test.py  web_parsing_service.py  xml_parsing_service.py
templator/: exp.py  output.html  page.html
tests/: test.py
tutorial/: test.py
web/: Dockerfile  apache.Dockerfile  file.html  main_page.html  nginx.conf  page.html  page1_URLnFile.html  page2_files.html  page3_result.html
web/css/: global.css
