[project]
name = "parser-studies-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pytest>=9.0.2",
    "smbprotocol>=1.16.1",
    "weasyprint>=68.1",
]
